Tue Mar 17 18:59:16 2015  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: use rb_gc_writebrrier() simply.
	  For incremental GC, we need to get a pointer to the objspace.
	  We can share this pointer for the following WB process.
	  And considering icache hit ratio, process in the GC.

	* gc.c (rb_gc_writebarrier): added.

	* gc.c (gc_writebarrier_generational, gc_writebarrier_incremental):
	  make them NOINLINE because inlining them into rb_gc_writebarrier()
	  makes a prologue code of rb_gc_writebarrier() longer (storing callee
	  save registers).

	  This patch improve the performance of WB on micro-benchmarks.

	  name                   ruby 2.1   trunk   modified
	  vm1_gc_wb_ary*            0.511   0.632      0.532
	  vm1_gc_wb_ary_promoted*   0.578   0.701      0.674
	  vm1_gc_wb_obj*            0.419   0.575      0.492
	  vm1_gc_wb_obj_promoted*   0.537   0.664      0.618
	                                                 (sec)

Tue Mar 17 18:51:43 2015  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm1_gc_wb_ary(_promoted).rb: separate fastpath and
	  slowpath for WB.

	  Before this change bm_vm1_gc_wb_ary.rb tried to check the performance
	  for WB slowpath (making a reference from oldobj to newobj). However,
	  from Ruby 2.2, 3 GCs are needed to promote new objects because
	  only 3 age objects are promted objects.

	  To compare fastpath and slowpath, introduce new "promoted" version
	  benchmark.

	  bm_vm1_gc_wb_ary.rb is for fastpath and
	  bm_vm1_gc_wb_ary_promoted.rb is for slowpath.

	* benchmark/bm_vm1_gc_wb_obj(_promtoed).rb: ditto.

Tue Mar 17 17:23:11 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): distinguish not-yet-stated and DT_UNKNOWN
	  by readdir, and traverse recursively for the former.  Linux
	  readdir returns DT_UNKNOWN on some filesystems, e.g., smbfs,
	  iso9660.

Mon Mar 16 17:43:21 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/webrick/server.rb: Fix regression bug in WEBrick's